// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apd state profile, Medicaid office component renders correctly 1`] = `
<Fragment>
  <h3
    className="mt0"
  >
    Medicaid director
  </h3>
  <div
    className="mb3"
  >
    <InputHolder
      hideLabel={false}
      label="Name"
      name="apd-state-profile-mdname"
      onChange={[Function]}
      type="text"
      value="name"
      wrapperClass=""
    />
    <InputHolder
      hideLabel={false}
      label="Email address"
      name="apd-state-profile-mdemail"
      onChange={[Function]}
      type="text"
      value="email"
      wrapperClass=""
    />
    <InputHolder
      hideLabel={false}
      label="Phone number"
      name="apd-state-profile-mdphone"
      onChange={[Function]}
      type="text"
      value="phone"
      wrapperClass=""
    />
  </div>
  <h3
    className="mt0"
  >
    Medicaid office
  </h3>
  <div>
    <InputHolder
      hideLabel={false}
      label="Address"
      name="apd-state-profile-addr1"
      onChange={[Function]}
      type="text"
      value="address 1"
      wrapperClass=""
    />
    <InputHolder
      hideLabel={false}
      label="Address continued (optional)"
      name="apd-state-profile-addr2"
      onChange={[Function]}
      type="text"
      value="address 2"
      wrapperClass=""
    />
    <div
      className="clearfix mxn1"
    >
      <div
        className="col col-12 sm-col-6 px1"
      >
        <InputHolder
          hideLabel={false}
          label="City"
          name="apd-state-profile-city"
          onChange={[Function]}
          type="text"
          value="city"
          wrapperClass=""
        />
      </div>
      <div
        className="col col-6 sm-col-3 px1"
      >
        <InputHolder
          hideLabel={false}
          label="State"
          name="apd-state-profile-state"
          onChange={[Function]}
          type="text"
          value="state"
          wrapperClass=""
        />
      </div>
      <div
        className="col col-6 sm-col-3 px1"
      >
        <InputHolder
          hideLabel={false}
          label="ZIP"
          name="apd-state-profile-zip"
          onChange={[Function]}
          type="text"
          value="zip"
          wrapperClass=""
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`apd state profile, Medicaid office component renders correctly 2`] = `
<Fragment>
  <h3
    className="mt0"
  >
    Medicaid director
  </h3>
  <div
    className="mb3"
  >
    <InputHolder
      hideLabel={false}
      label="Name"
      name="apd-state-profile-mdname"
      onChange={[Function]}
      type="text"
      value="a"
      wrapperClass=""
    />
    <InputHolder
      hideLabel={false}
      label="Email address"
      name="apd-state-profile-mdemail"
      onChange={[Function]}
      type="text"
      value="email"
      wrapperClass=""
    />
    <InputHolder
      hideLabel={false}
      label="Phone number"
      name="apd-state-profile-mdphone"
      onChange={[Function]}
      type="text"
      value="phone"
      wrapperClass=""
    />
  </div>
  <h3
    className="mt0"
  >
    Medicaid office
  </h3>
  <div>
    <InputHolder
      hideLabel={false}
      label="Address"
      name="apd-state-profile-addr1"
      onChange={[Function]}
      type="text"
      value="address 1"
      wrapperClass=""
    />
    <InputHolder
      hideLabel={false}
      label="Address continued (optional)"
      name="apd-state-profile-addr2"
      onChange={[Function]}
      type="text"
      value="address 2"
      wrapperClass=""
    />
    <div
      className="clearfix mxn1"
    >
      <div
        className="col col-12 sm-col-6 px1"
      >
        <InputHolder
          hideLabel={false}
          label="City"
          name="apd-state-profile-city"
          onChange={[Function]}
          type="text"
          value="city"
          wrapperClass=""
        />
      </div>
      <div
        className="col col-6 sm-col-3 px1"
      >
        <InputHolder
          hideLabel={false}
          label="State"
          name="apd-state-profile-state"
          onChange={[Function]}
          type="text"
          value="state"
          wrapperClass=""
        />
      </div>
      <div
        className="col col-6 sm-col-3 px1"
      >
        <InputHolder
          hideLabel={false}
          label="ZIP"
          name="apd-state-profile-zip"
          onChange={[Function]}
          type="text"
          value="zip"
          wrapperClass=""
        />
      </div>
    </div>
  </div>
</Fragment>
`;
